# qalloc

./: .gitignore  CMakeLists.txt  README.md  classes.html  dir_41acfb016b119147141a622c7f1387da.html  dir_41acfb016b119147141a622c7f1387da.js  example.cpp  globals_enum.html  index.html  index.md  namespacemembers_enum.html  namespacemembers_type.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
d0/d1e/: structblock__info__t-members.html
d2/db2/: classvector-members.html
d3/d0b/: stl_8hpp.html
d3/d17/: namespaceqalloc.html
d3/dc1/: pool_8hpp_source.html
d5/d61/: allocator_8hpp.js
d5/d6d/: structlist_1_1node__type.html
d5/d8a/: pool__base_8hpp.html
d6/df2/: structqalloc_1_1freed__block__t-members.html
d8/d69/: classpool__base__t-members.html
d8/daf/: qalloc_8hpp_source.html
d9/dde/: iterator_8hpp.js
da/d3e/: memory_8hpp.js
da/d4c/: classqalloc_1_1pool__base__t.js
da/d63/: defs_8hpp_source.html
dc/d55/: type__info_8hpp.html  type__info_8hpp.js
de/d99/: allocator__impl_8hpp_source.html
de/dfe/: namespaceqalloc_1_1pointer.html
df/d0a/: structfreed__block__t-members.html
df/d41/: classlist-members.html
df/dae/: structfreed__block__t.html
df/dbe/: classpool__base__t.html
doc/: Doxyfile
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_24309af090b3241b43b69ae9996ee870.html  dir_24309af090b3241b43b69ae9996ee870.js  dir_533dd9910e92adbb7b39d7fd6772556c.html  dir_533dd9910e92adbb7b39d7fd6772556c.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  hierarchy.html  hierarchy.js  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  navtreedata.js
doc/html/d0/d1e/: structblock__info__t-members.html
doc/html/d0/da8/: structblock__info__t.html
doc/html/d0/dd7/: classpool__t-members.html
doc/html/d1/daa/: pool__base__impl_8hpp.html  pool__base__impl_8hpp.js  pool__base__impl_8hpp_source.html
doc/html/d2/d17/: pointer_8hpp.html  pointer_8hpp.js  pointer_8hpp_source.html
doc/html/d2/d45/: classqalloc_1_1allocator__base_1_1rebind.html  classqalloc_1_1allocator__base_1_1rebind.js
doc/html/d2/d56/: classqalloc_1_1allocator__base.html  classqalloc_1_1allocator__base.js
doc/html/d2/db6/: structqalloc_1_1freed__block__t.html  structqalloc_1_1freed__block__t.js
doc/html/d2/dce/: namespaceqalloc_1_1stl.html
doc/html/d3/d0b/: stl_8hpp.js  stl_8hpp_source.html
doc/html/d3/d17/: namespaceqalloc.html  namespaceqalloc.js
doc/html/d3/d3c/: classpool__t.html
doc/html/d3/d3d/: pool__impl_8hpp.html  pool__impl_8hpp_source.html
doc/html/d3/d6a/: classqalloc_1_1allocator__base_1_1rebind-members.html
doc/html/d3/dc1/: pool_8hpp.html  (+2 more)
doc/html/search/: all_0.js  all_10.js  all_12.js  all_2.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  classes_6.js  classes_8.js  defines_1.js  enums_0.js  files_0.js  files_2.js  files_3.js  files_5.js  files_6.js  files_b.js  functions_1.js  functions_10.js  functions_11.js  functions_4.js  functions_6.js  functions_b.js  functions_c.js  functions_f.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_4.js  typedefs_5.js  typedefs_6.js  (+10 more)
doc/latex/: annotated.tex  dir_24309af090b3241b43b69ae9996ee870.tex  dir_41acfb016b119147141a622c7f1387da.tex  dir_533dd9910e92adbb7b39d7fd6772556c.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
include/qalloc/: qalloc.h  qalloc.hpp
include/qalloc/internal/: allocator.hpp  allocator_impl.hpp  block.hpp  debug_log.hpp  defs.hpp  global_pool.hpp  memory.hpp  optional.hpp  pointer.hpp  pool.hpp  pool_base.hpp  pool_base_impl.hpp  pool_detail_impl.hpp  pool_impl.hpp  stl.hpp  subpool.hpp  type_info.hpp
search/: all_1.js  all_11.js  all_14.js  all_3.js  all_5.js  all_9.js  all_e.js  defines_0.js  enums_1.js  enumvalues_0.js  files_1.js  files_8.js  files_a.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  typedefs_2.js  typedefs_3.js  typedefs_a.js  variables_2.js  variables_5.js
src/benchmark/: CMakeLists.txt  benchmark.cpp
src/c_wrapper/: CMakeLists.txt  qalloc.cpp
src/c_wrapper_test/: CMakeLists.txt  test.cpp
src/test/: CMakeLists.txt  test.cpp
(+144 files in other folders)
